[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/spritesheets/quado_posion_pod spritesheet.png" type="Texture" id=1]
[ext_resource path="res://assets/sprites/enemy_hp_green_fill.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/enemy_hp_outline.png" type="Texture" id=3]
[ext_resource path="res://scenes/kineamtics/enemies/quadro_pod/quadro_pod_silica.gd" type="Script" id=4]

[sub_resource type="CapsuleShape2D" id=6]
radius = 9.72481
height = 6.51093

[sub_resource type="CapsuleShape2D" id=7]
radius = 39.2919
height = 314.654

[sub_resource type="Animation" id=8]
resource_name = "attack"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 9, 10, 11, 12 ]
}

[sub_resource type="Animation" id=9]
resource_name = "dead"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 13, 14, 15, 16, 17, 18 ]
}

[sub_resource type="Animation" id=10]
resource_name = "idle"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=11]
resource_name = "run"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7, 8 ]
}

[node name="quadro_pod_silica" type="KinematicBody2D"]
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1.78583, 2.09563 )
shape = SubResource( 6 )

[node name="crosshair" type="Position2D" parent="."]
position = Vector2( -18, 0.281 )

[node name="RayCast2DLeft" type="RayCast2D" parent="."]
position = Vector2( -20, 0 )
scale = Vector2( 0.5, 0.4 )

[node name="RayCast2DRight" type="RayCast2D" parent="."]
position = Vector2( 20, 0 )
scale = Vector2( 0.5, 0.4 )

[node name="detection_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection_area"]
position = Vector2( -0.0556812, -0.167044 )
rotation = 1.5708
shape = SubResource( 7 )

[node name="hpbar" type="TextureProgress" parent="."]
margin_left = -22.0
margin_top = -24.0
margin_right = 18.0
margin_bottom = -18.0
value = 100.0
texture_over = ExtResource( 3 )
texture_progress = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="playerDetectRayRight" type="RayCast2D" parent="."]
rotation = -1.5708
scale = Vector2( 1, 3 )
enabled = true

[node name="playerDetectRayLeft" type="RayCast2D" parent="."]
rotation = 1.5708
scale = Vector2( 1, 3 )
enabled = true

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 0.078743, -28.5057 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 20
frame = 19

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/attack = SubResource( 8 )
anims/dead = SubResource( 9 )
anims/idle = SubResource( 10 )
anims/run = SubResource( 11 )

[connection signal="body_entered" from="detection_area" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="detection_area" to="." method="_on_detection_area_body_exited"]
